--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,8 @@
 <html>
-	<title> Hello App</title>
-	<head> Hello App head</head>
+	
+	<head>
+		<title> Hello App</title>
+	</head>
 	<body> 
 		<h1>This is a test application</h1>
 	</body>
