--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
 		<title> Hello App</title>
 	</head>
 	<body> 
+		<h1 style="text-align:center" >Git Demo tutorial</h1>
 		<h1>This is a test application</h1>
 	</body>
 	
